@@ -23,6 +23,10 @@
 #include <QRegExp>
 #include <QDir>
 
+#ifndef Q_OS_WIN
+#include <stdlib.h>
+#endif
+
 QString Paths::app_path;
 QString Paths::config_path;
 
@@ -129,8 +133,14 @@ QString Paths::configPath() {
 #ifdef PORTABLE_APP
 		return appPath();
 #else
-		return QDir::homePath() + "/.smplayer";
-		//return QDir::homePath() + "/.config/smplayer";
+		const char * XDG_CONFIG_HOME = getenv("XDG_CONFIG_HOME");
+		if (XDG_CONFIG_HOME!=NULL) {
+			qDebug("Paths::configPath: XDG_CONFIG_HOME: %s", XDG_CONFIG_HOME);
+			return QString(XDG_CONFIG_HOME) + "/smplayer";
+		} 
+		else
+		//return QDir::homePath() + "/.smplayer";
+		return QDir::homePath() + "/.config/smplayer";
 #endif
 	}
 }
